# web-mail-client

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.tauri-builder  LICENSE  PLUGINS.md  README.md  SECURITY.md  SECURITY_AUDIT.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: tauri-build.yml
client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  sw.ts  vite-env.d.ts
client/src/api/: index.ts
client/src/components/: BiometricLock.tsx  CacheIndicator.tsx  CacheSettings.tsx  Layout.tsx
client/src/crypto/: composePipeline.ts  inbound.ts  keystore.ts  pgp.ts  smime.ts
client/src/hooks/: useTauri.ts  useWebSocket.ts
client/src/i18n/: en.json  fr.json
client/src/pages/: AdminPage.tsx  CalendarPage.tsx  ContactsPage.tsx  LoginPage.tsx  MailPage.tsx  ResetPasswordPage.tsx  SearchPage.tsx  SecurityPage.tsx  SettingsPage.tsx
client/src/pwa/: offlineDB.ts  push.ts  register.ts
client/src/services/: prefsSync.ts  (+2 more)
docs/: ATTACHMENTS.md  BACKUP.md  CONFIGURATION.md  CONTACTS.md  NEXTCLOUD.md  O2SWITCH_DAV.md  O2SWITCH_DEPLOY.md  PWA.md
plugins/ollama-ai/: index.js  manifest.json
server/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
server/src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tauri-builder/: server.mjs
(+128 files in other folders)
