[package]
name = "webmail"
version = "1.7.0"
edition = "2021"

[lib]
name = "webmail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener         = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart      = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link      = "2"
tauri-plugin-notification   = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
